--- a/app/src/main/res/layout/main_menu.xml
+++ b/app/src/main/res/layout/main_menu.xml
@@ -23,14 +23,16 @@
     <TextView
         android:id="@+id/textView6"
         android:layout_width="226dp"
-        android:layout_height="256dp"
-        android:text="TextView"
+        android:layout_height="263dp"
+        android:text="@string/helpText"
         android:textColor="#000000"
-        android:textSize="24sp"
+        android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="@+id/imageView2"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="@+id/imageView2"
-        app:layout_constraintTop_toTopOf="@+id/imageView2" />
+        app:layout_constraintTop_toTopOf="@+id/imageView2"
+        app:layout_constraintVertical_bias="0.498" />
 
     <TextView
         android:id="@+id/textView7"
@@ -43,10 +45,9 @@
         android:textStyle="bold|italic"
         app:layout_constraintBottom_toBottomOf="@+id/imageView2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="@+id/imageView2"
         app:layout_constraintTop_toTopOf="@+id/imageView2"
-        app:layout_constraintVertical_bias="0.225" />
+        app:layout_constraintVertical_bias="0.197" />
 
     <LinearLayout
         android:layout_width="409dp"
